--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web Application Prototype</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">My Web App</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <main class="container">
+    <h1>Welcome to My Web Application</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec dui vel purus malesuada vehicula. Nunc vel
+      velit ut ex vestibulum eleifend. Fusce sodales turpis non nibh fermentum, non auctor ligula congue.</p>
+  </main>
+
+  <footer class="page-footer">
+    <div class="container">
+      <p>&copy; 2023 Web Application Prototype</p>
+    </div>
+  </footer>
+
+</body>
+
+</html>
 
