--- a/index.html
+++ b/index.html
@@ -30,13 +30,37 @@
       velit ut ex vestibulum eleifend. Fusce sodales turpis non nibh fermentum, non auctor ligula congue.</p>
   </main>
 
+  <div class="container">
+    <!-- Trigger modal -->
+    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Open Modal</a>
+  </div>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
+
   <footer class="page-footer">
     <div class="container">
       <p>&copy; 2023 Web Application Prototype</p>
     </div>
   </footer>
 
+  <!-- Initialize modal and other scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>
+    // Initialize the modal
+    document.addEventListener('DOMContentLoaded', function () {
+      var elems = document.querySelectorAll('.modal');
+      var instances = M.Modal.init(elems);
+    });
+  </script>
 </body>
 
 </html>
-
