--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Application Prototype</title>
+  <!-- Include Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <header class="navbar-fixed">
+
+  <!-- Navbar -->
+  <header>
     <nav>
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo">My Web App</a>
+      <div class="nav-wrapper teal">
+        <a href="#" class="brand-logo">FHSU</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -24,38 +24,64 @@
     </nav>
   </header>
 
+  <!-- Main Content -->
   <main class="container">
     <h1>Welcome to My Web Application</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec dui vel purus malesuada vehicula. Nunc vel
       velit ut ex vestibulum eleifend. Fusce sodales turpis non nibh fermentum, non auctor ligula congue.</p>
-  </main>
 
-  <div class="container">
-    <!-- Trigger modal -->
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-image">
+            <img src="/1576784929777.jpeg" alt="Sample Image">
+          </div>
+          <div class="card-content">
+            <p>This is a sample card with some dummy text. You can add more content here to describe your services or
+              features.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-image">
+            <img src="/fhsu-lockdown-centered.png" alt="Sample Image">
+          </div>
+          <div class="card-content">
+            <p>This is another sample card with some dummy text. You can customize this content based on your
+              requirements.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Button Triggering Modal -->
     <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Open Modal</a>
-  </div>
+  </main>
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
       <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <p>A bunch of text. You can add more content here to simulate a detailed modal description.</p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
     </div>
   </div>
 
-  <footer class="page-footer">
+  <!-- Footer -->
+  <footer class="page-footer teal">
     <div class="container">
       <p>&copy; 2023 Web Application Prototype</p>
     </div>
   </footer>
 
-  <!-- Initialize modal and other scripts -->
+  <!-- Include Materialize JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <!-- Initialize Modal -->
   <script>
-    // Initialize the modal
     document.addEventListener('DOMContentLoaded', function () {
       var elems = document.querySelectorAll('.modal');
       var instances = M.Modal.init(elems);
