--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- Navbar -->
   <header>
     <nav>
-      <div class="nav-wrapper teal">
-        <a href="#" class="brand-logo">FHSU</a>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">My Web App</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -34,7 +34,7 @@
       <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
-            <img src="/1576784929777.jpeg" alt="Sample Image">
+            <img src="/fhsu-lockdown-centered.png" alt="Sample Image">
           </div>
           <div class="card-content">
             <p>This is a sample card with some dummy text. You can add more content here to describe your services or
@@ -45,7 +45,7 @@
       <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
-            <img src="/fhsu-lockdown-centered.png" alt="Sample Image">
+            <img src="/1576784929777.jpeg" alt="Sample Image">
           </div>
           <div class="card-content">
             <p>This is another sample card with some dummy text. You can customize this content based on your
@@ -66,12 +66,12 @@
       <p>A bunch of text. You can add more content here to simulate a detailed modal description.</p>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat black-text">Agree</a>
     </div>
   </div>
 
   <!-- Footer -->
-  <footer class="page-footer teal">
+  <footer class="page-footer">
     <div class="container">
       <p>&copy; 2023 Web Application Prototype</p>
     </div>
