put images in their own folder

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
-            <img src="/fhsu-lockdown-centered.png" alt="Sample Image">
+            <img src="/img/fhsu-lockdown-centered.png" alt="Sample Image">
           </div>
           <div class="card-content">
             <p>This is a sample card with some dummy text. You can add more content here to describe your services or
@@ -45,7 +45,7 @@
       <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
-            <img src="/1576784929777.jpeg" alt="Sample Image">
+            <img src="/img/1576784929777.jpeg" alt="Sample Image">
           </div>
           <div class="card-content">
             <p>This is another sample card with some dummy text. You can customize this content based on your
